<resources>
    <string name="app_name">SAView</string>
    <string name="join">join</string>
    <string name="join">join</string>
    <string name="create">create</string>
    <string name="b">B</string>
    <string name="b">B</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">sign up</string>
</resources>