<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3D47"
    android:orientation="vertical">

    <Button
        android:id="@+id/createRoomButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/circle_corner"
        android:backgroundTint="#0091EA"
        android:text="@string/create" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/circle_corner"
        android:backgroundTint="#0091EA"
        android:text="@string/join" />

    //room scrolling
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/circle_corner"

                    android:backgroundTint="#ff79c6"
                    android:text="@string/b" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="6dp"
                    android:layout_weight="0.8"

                    android:background="@drawable/circle_corner"

                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/circle_corner"

                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="0.9"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/circle_corner"

                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="0.9"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/circle_corner"

                    android:backgroundTint="#ff79c6"
                    android:text="@string/b" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="0.9"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button10"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="0.9"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"

                    android:layout_weight="0.9"
                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button15"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"

                    android:layout_weight="0.9"
                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"

                android:background="@drawable/circle_corner"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button17"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button18"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"

                    android:layout_weight="0.9"
                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button19"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"

                    android:layout_weight="0.9"
                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button21"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"

                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#ff79c6"
                    android:text="B" />

                <Button
                    android:id="@+id/button22"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"

                    android:layout_weight="0.9"
                    android:background="@drawable/circle_corner"
                    android:backgroundTint="#6272a4"
                    android:text="Button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/nav-bar"
        android:layout_width="409dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/calendarButton"
                android:layout_width="136dp"
                android:layout_height="fill_parent"
                android:background="@color/Transparent"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/baseline_date_range_black_18dp" />

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="136dp"
                android:layout_height="fill_parent"
                android:background="@color/Transparent"
                app:layout_column="2"
                app:layout_row="0"
                app:srcCompat="@drawable/baseline_home_black_18dp" />

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="136dp"
                android:layout_height="fill_parent"
                android:background="@color/Transparent"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/baseline_account_circle_black_18dp" />
        </LinearLayout>
    </androidx.gridlayout.widget.GridLayout>

</FrameLayout>